--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://witke16.github.io/tnaf_zaliczenie/",
+  "homepage": "http://wweinermytodolistapp.com/",
   "name": "todo_list",
   "version": "0.1.0",
   "private": true,
